--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@react-three/drei": "^9.105.5",
+    "@react-three/fiber": "^8.16.3",
+    "@types/three": "^0.164.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.164.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
