--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.105.5",
     "@react-three/fiber": "^8.16.3",
     "@types/three": "^0.164.0",
+    "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.164.1"
