--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use-scroll-snap": "^1.0.0",
     "three": "^0.164.1"
   },
   "devDependencies": {
