--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@react-three/fiber": "^8.16.3",
     "@types/three": "^0.164.0",
     "framer-motion": "^11.1.7",
+    "r3f-perf": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use-scroll-snap": "^1.0.0",
+    "react-router-dom": "^6.23.0",
     "three": "^0.164.1"
   },
   "devDependencies": {
