--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@react-three/drei": "^9.105.5",
     "@react-three/fiber": "^8.16.3",
+    "@tanstack/react-table": "^8.17.3",
     "@types/three": "^0.164.0",
     "framer-motion": "^11.1.7",
     "lenis": "^1.0.45",
@@ -22,6 +23,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
+    "react-table": "^7.8.0",
     "three": "^0.164.1"
   },
   "devDependencies": {
