--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/three": "^0.164.0",
     "framer-motion": "^11.1.7",
     "lenis": "^1.0.45",
+    "pace-js": "^1.2.4",
     "r3f-perf": "^7.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
