account page added and routed

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iframe-resizer/child": "^5.1.5",
     "@react-google-maps/api": "^2.19.3",
     "@react-three/drei": "^9.105.5",
     "@react-three/fiber": "^8.16.3",
